zoom leve changed, camera perspective changed, overlap issue on mobile fixed

--- a/my-app/frontend/src/App.module.css
+++ b/my-app/frontend/src/App.module.css
@@ -1,6 +1,7 @@
 .content_wrapper {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .fallback_wrapper {
